# FinalNLP

./: .envrc  .gitignore  README.md  pyproject.toml
src/finalnlp/: .gitignore  Intro_to_Weights_&_Biases.ipynb  __init__.py  bitnet1.py  bitnet158.py  bpe.py  compare.ipynb  gpt_model.py  lightning-torchvision.ipynb  replacer.py  rmsnorm_torch.py  utils.py  vision.ipynb
src/finalnlp/gpt/: gpt_model.py
src/finalnlp/gpt/nb/: gpt_sort_158b.ipynb  gpt_sort_1b.ipynb  gpt_sort_plain.ipynb  share.py
src/finalnlp/sentence_classifier/: classify_plain.ipynb  model.py
src/finalnlp/vision_transformers/CIFAR/: CIFAR_158b.ipynb  CIFAR_1b.ipynb  CIFAR_plain.ipynb
src/finalnlp/vision_transformers/MNIST/: MNIST_158b.ipynb  MNIST_1b.ipynb  MNIST_plain.ipynb
