[project]
name = "finalnlp"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "torchaudio>=2.2.1",
    "transformers>=4.39.1",
    "evaluate>=0.4.1",
    "datasets>=2.18.0",
    "tqdm>=4.66.2",
    "accelerate>=0.28.0",
    "sentencepiece>=0.2.0",
    "wandb>=0.16.5",
    "matplotlib>=3.8.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.3",
    "ipywidgets>=8.1.2",
    "ruff>=0.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/finalnlp"]
